bpo-29619: Do not rely on HAVE_LARGEFILE_SUPPORT for the size of types not off_t.